force-app/main/default/objects/Joint_Owners__c/Joint_Owners__c.object-meta.xml
<CustomObject>
    <label>Joint Owner</label>
    <nameField>
        <displayFormat>JO-{00000}</displayFormat>
        <label>Joint Owner Sys Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Joint Owners</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>