force-app/main/default/objects/Joint_Owners__c/fields/Customer_DOB__c.field-meta.xml
<CustomField>
    <fullName>Customer_DOB__c</fullName>
    <formula>IF(Account__r.IsPersonAccount, Account__r.PersonContact.Birth_Date__c, Account__r.Date_of_Birth_Arabic__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer DOB</label>
    <type>Date</type>
</CustomField>