force-app/main/default/objects/Joint_Owners__c/fields/Customer_Gender__c.field-meta.xml
<CustomField>
    <fullName>Customer_Gender__c</fullName>
    <formula>IF(Account__r.IsPersonAccount, TEXT(Account__r.PersonContact.Gender__c), TEXT(Account__r.Gender__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Gender</label>
    <type>Text</type>
</CustomField>