force-app/main/default/objects/Joint_Owners__c/fields/Customer_Nationality__c.field-meta.xml
<CustomField>
    <fullName>Customer_Nationality__c</fullName>
    <formula>IF(Account__r.IsPersonAccount, TEXT(Account__r.PersonContact.Nationality__c), TEXT(Account__r.Nationality__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Nationality</label>
    <type>Text</type>
</CustomField>