force-app/main/default/objects/Joint_Owners__c/fields/Ownership_Share__c.field-meta.xml
<CustomField>
    <fullName>Ownership_Share__c</fullName>
    <label>Ownership Share</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>